<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ekf_system</name>
    <version>0.1.0</version>
    <description>EKF-based state estimation system for needle tracking</description>

    <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build Dependencies -->
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>eigen3_cmake_module</build_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>ndi_msgs</build_depend>

    <!-- Runtime Dependencies -->
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_components</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>eigen3_cmake_module</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>ndi_msgs</exec_depend>

    <!-- Testing Dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>